# coding_test_solving_helper

./: .pre-commit-config.yaml  README.md  index.html  pyproject.toml
css/: index.css  nextpage.css  styles.css
html/: nextpage.html
js/: nextpage.js  old-nextpage.js  script.js  temp.js
static/: styles.css
templates/: nextpage.html
